--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ a {
 .navbar {
   margin-bottom: 0px;
   background: #2a313d;
+  border: none;
 }
 
 .nav-scroll {
@@ -71,4 +72,11 @@ a {
   outline-color: #ffffff;
   outline-width: thin;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
+  padding: 10px;
+}
+
+
+.footer {
+  text-align: right;
+  padding-right: 25px;
 }
