--- a/css/main.css
+++ b/css/main.css
@@ -41,18 +41,6 @@ active {
     color: #ffffff;
 }
 
-.article_title {
-  font-size: 14pt;
-  padding-left: 30px;
-  padding-top: 0px;
-}
-
-.article_text {
-  padding-left: 30px;
-  padding-top: 0px;
-  font-size: 10pt;
-}
-
 .navbar {
   margin-bottom: 0px;
   background: #2a313d;
@@ -67,7 +55,7 @@ active {
     top: -50px;
 }
 
-.welcome {
+.jumbotron #welcome {
   background-image: url('../pics/background.JPG');
   background-size: cover;
   height: 100vh;
@@ -79,14 +67,34 @@ active {
 
 .jumbotron {
   background: #969696;
-  outline-color: #ffffff;
-  outline-width: thin;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
-  padding: 10px;
+  outline-style: solid;
+  outline-color: #363636;
+  outline-width: 1px;
+  box-shadow: 3px 3px 2px #040404;
+  padding-top: 50px;
+  margin-top: 0px;
 }
 
+.jumbotron h3 {
+  font-family: sans-serif;
+  font-size: 2em;
+  padding-left: 30px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
 
-.footer {
+.jumbotron p {
+  font-family: sans-serif;
+  font-size: 1.2em;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 0px;
+}
+
+.jumbotron #footer {
+  margin: none;
+  padding: none;
+  border: none;
   text-align: right;
   padding-right: 25px;
 }
