--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,8 @@ button {
 nav {
   transition: top 0.25s ease-in-out;
   height: 50px;
+  border-style: solid;
+  border-width: 1px;
 }
 
 ul {
@@ -37,12 +39,12 @@ li {
 
 a {
     cursor: pointer;
-    color: #ffffff;
+    color: #CCCCCC;
 }
 
-active {
-    background-color: #ffffff;
-    color: #ffffff;
+a active {
+    background-color: #696969;
+    color: #696969;
 }
 
 .navbar {
@@ -60,12 +62,15 @@ active {
 }
 
 .jumbotron {
-  background: #969696;
+  background: #CCCCCC;
   outline-style: solid;
   outline-color: #363636;
   outline-width: 1px;
-  box-shadow: 3px 3px 2px #040404;
-  padding-top: 50px;
+  box-shadow: 3px 3px 2px #222222;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  color: #222222;
 }
 
 .jumbotron #welcome {
@@ -73,10 +78,10 @@ active {
   background-size: cover;
   height: 100vh;
   text-align: center;
-  text-shadow: 2px 2px #545454;
+  text-shadow: 2px 2px #222222;
   padding-top: 50px;
   padding: 50px;
-  color: #f4f4f4;
+  color: #CCCCCC;
 }
 
 .jumbotron h3 {
@@ -93,6 +98,32 @@ active {
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 0px;
+}
+
+.jumbotron .thumb_title {
+  font-family: sans-serif;
+  font-size: 1.5em;
+  padding-left: 5px;
+  padding-top: 0px;
+  margin-top: 0px;
+}
+
+.jumbotron .thumb_text {
+  font-family: sans-serif;
+  font-size: 1em;
+  padding-left: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+}
+
+#sidebar_title {
+  font-family: sans-serif;
+  font-size: 2em;
+}
+
+#sidebar_description {
+
 }
 
 #footer {
