--- a/css/main.css
+++ b/css/main.css
@@ -150,9 +150,18 @@ img {
 }
 
 @keyframes info {
-  from {right: 100%;}
-  to {right: 0%;}
+  from {right: 200%;}
+  to {right: 30%;}
 }
+
+/* #pallette {
+  position: relative;
+  background-color: rgba(0,0,0,0.5);
+  animation-name: pic;
+  animation-duration: 1.5s;
+  right: 0%;
+  padding-bottom: 30px;
+}*/
 
 #animInPic img {
   position: relative;
@@ -166,11 +175,29 @@ img {
   border-radius: 4px;
 }
 
+#animInText h2 {
+  position: relative;
+  animation-name: info;
+  animation-duration: 1.5s;
+  padding-top: 50px;
+  right: 30%;
+  padding-left: 0px;
+}
+
 #animInText h3 {
   position: relative;
   animation-name: info;
   animation-duration: 1.5s;
-  right: 0%;
+  right: 30%;
+  padding-left: 0px;
+}
+
+#animInText h4 {
+  position: relative;
+  animation-name: info;
+  animation-duration: 1.5s;
+  right: 30%;
+  text-align: right;
 }
 
 #sidebar_title {
