--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,11 @@ img {
     margin:auto;
 }
 
+.img-thumbnail {
+  display:block;
+  margin:auto;
+}
+
 .jumbotron .thumb_title {
   font-family: sans-serif;
   font-size: 1.5em;
